--- a/docs/extra.css
+++ b/docs/extra.css
@@ -15,6 +15,24 @@
   min-height: 69vh;
 }
 
+.md-tabs {
+  background-color: #3d3d3d;
+}
+
+#header-block {
+  background-color: #3d3d3d;
+}
+
+#blue-bar {
+  background-color: blue;
+  width: 100%;
+  height: 0.5em;
+}
+
+.header-image {
+  max-height: 2.4rem;
+}
+
 #home-container {
   display: flex;
   min-height: 69vh;
