Hide docs nav for pages except docs page

--- a/custom_theme/partials/header.html
+++ b/custom_theme/partials/header.html
@@ -2,9 +2,14 @@
   <a href="{{ base_url }}">
     <img class="header-image logo" src="{{ base_url }}/{{ config.theme.logo }}">
   </a>
-  <a href="{{ base_url }}/about" style="color:white">
-    About
-  </a>
+  <div>
+    <a href="{{ base_url }}/about" style="color:white">
+     ABOUT
+   </a>
+   <a href="{{ base_url }}/docs" style="color:white">
+     DOCUMENTATION
+   </a>
+  </div>
   <a href="https://alces-flight.com" target="_blank">
     <img class="header-image" src="{{ base_url }}/assets/images/powered_by.png">
   </a>
