--- a/custom_theme/partials/header.html
+++ b/custom_theme/partials/header.html
@@ -2,7 +2,7 @@
   <a href="{{ base_url }}">
     <img class="header-image logo" src="{{ base_url }}/{{ config.theme.logo }}">
   </a>
-  <div>
+  <div id="header-nav-links">
     <a href="{{ base_url }}/about" style="color:white">
      ABOUT
    </a>
@@ -10,8 +10,8 @@
      DOCUMENTATION
    </a>
   </div>
-  <a href="https://alces-flight.com" target="_blank">
-    <img class="header-image" src="{{ base_url }}/assets/images/powered_by.png">
+  <a id="alces-link" href="https://alces-flight.com" target="_blank">
+    <img class="header-image" src="{{ base_url }}/assets/images/poweredby_white.png">
   </a>
 </div>
 
