--- a/docs/extra.css
+++ b/docs/extra.css
@@ -21,7 +21,7 @@ body {
 }
 
 .md-tabs {
-  background-color: #3d3d3d;
+  background-color: var(--md-primary-fg-color);
 }
 
 .md-sidebar {
@@ -46,15 +46,30 @@ body {
   box-shadow: none !important;
 }
 
+#header-nav-links {
+  display:flex;
+  justify-content:center;
+  align-items:center
+}
+
+#header-nav-links a {
+  margin-left: 2rem;
+  font-size: 0.7rem;
+}
+
 #header-block {
-  background-color: #3d3d3d;
+  background-color: var(--md-primary-fg-color);
   height: 3.4rem;
 }
 
+#alces-link {
+  margin-left: auto;
+}
+
 #blue-bar {
-  background-color: blue;
+  background-color: var(--alces-blue);
   width: 100%;
-  height: 0.5em;
+  height: 0.7em;
 }
 
 .header-image {
@@ -77,7 +92,7 @@ body {
 }
 
 #home-header {
-  color: #3d3d3d !important;
+  color: var(--md-typeset-color) !important;
   font-size: 2.5em !important;
   margin-bottom: 2em;
 }
@@ -93,10 +108,16 @@ body {
 }
 
 .button {
-  background-color: blue;
+  background-color: var(--alces-blue);
   border-radius: 2px;
   padding: 0.5em;
   color: white;
+}
+
+.button:hover {
+  color: white !important;
+  background-color: var(--alces-blue-dark);
+  transition: background-color 125ms;
 }
 
 .button:visited {
@@ -150,9 +171,14 @@ body {
 
 [data-md-color-scheme="alces"] {
   --md-primary-fg-color: #191919;
-  --md-accent-fg-color:  #2693D7;
+  --md-accent-fg-color:  var(--alces-blue);
 }
 
 .md-logo img {
   height: 2rem !important;
+}
+
+:root {
+  --alces-blue: #2693D7;
+  --alces-blue-dark: #0A6AA6;
 }
