Display pop out menu for narrow widths for all pages

--- a/docs/extra.css
+++ b/docs/extra.css
@@ -39,8 +39,9 @@ body {
 }
 
 @media screen and (max-width: 76.1875em) {
-  .md-sidebar {
+  .md-sidebar--primary {
     left: -14rem !important;
+    display: block !important;
   }
 
   #header-nav-links {
