--- a/custom_theme/partials/footer.html
+++ b/custom_theme/partials/footer.html
@@ -1,11 +1,10 @@
-<div class="footer">
-  <img src="{{ base_url }}/assets/images/bottom_cloud.png">
-  <div class="footer-content">
-    <img class="header-image" src="{{ base_url }}/assets/images/logo.png">
-    <strong>open</strong>flight<span class="HPC">HPC</span>
+<div id="footer-container">
+  <div class="footer">
+    <img id="cloud-l" class="cloud" src="{{ base_url }}/assets/images/parting_cloud_l.png">
+    <img class="header-image" src="{{ base_url }}/assets/images//openflighthpc_grey.png">
     <a href="https://github.com/openflighthpc">
       <img id="github-logo" src="{{ base_url }}/assets/images/github.png">
     </a>
+    <img id="cloud-r" class="cloud" src="{{ base_url }}/assets/images/parting_cloud_r.png">
   </div>
-  <img src="{{ base_url }}/assets/images/bottom_cloud.png">
 </div>
