--- a/docs/extra.css
+++ b/docs/extra.css
@@ -3,6 +3,22 @@ body {
   background-repeat: no-repeat;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+    background: linear-gradient(#ECECEC, #DCEEF5);
+}
+
+#cloud-bar {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+}
+
 .md-main {
   display: flex;
 }
@@ -154,6 +170,7 @@ body {
 #home-image img {
   margin-left: auto;
   margin-right: auto;
+  max-height: 70vh !important;
 }
 
 .button {
@@ -209,17 +226,40 @@ a {
   width: 16.5rem;
 }
 
-.footer {
-  display: flex;
-  justify-content: space-between;
-  max-height: 5rem;
+.spacer {
+  height: 50vh;
+  background-color: #DCEEF5;
+  width:100%;
 }
 
-.footer-content {
+#footer-container {
+  display: block;
+}
+
+.footer {
   display: flex;
-  align-items: flex-end;
-  margin-bottom: 1rem;
-  font-size: large;
+  position: relative;
+  z-index: 2;
+  justify-content: center;
+  align-items: center;
+  max-height: 5rem;
+  width: 100%;
+  padding-bottom: 0.5rem;
+  background-color: white;
+}
+
+.cloud {
+  width: 20vw;
+  position: absolute;
+  bottom: 0;
+}
+
+#cloud-l {
+  left: 0;
+}
+
+#cloud-r {
+  right: 0;
 }
 
 .HPC {
