--- a/docs/extra.css
+++ b/docs/extra.css
@@ -1,15 +1,11 @@
-body {
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
 html, body {
   width: 100%;
   height: 100%;
 }
 
 body {
-    background: linear-gradient(#ECECEC, #DCEEF5);
+  background-size: cover;
+  background: linear-gradient(#ECECEC, var(--sky-blue-grey)) no-repeat;
 }
 
 #cloud-bar {
@@ -19,20 +15,9 @@ body {
   bottom: 0;
 }
 
-.md-main {
-  display: flex;
-}
-
 .md-main__inner {
-  width: 100%;
   max-width: 100% !important;
-  min-height: 69vh;
   margin: 0;
-  display: flex;
-}
-
-.md-main__inner article {
-  min-height: 69vh;
 }
 
 .md-tabs {
@@ -40,11 +25,10 @@ body {
 }
 
 .md-sidebar {
-  min-height: 69vh;
-  flex: 1 1 auto;
+  min-height: 70vh;
   padding-inline: 1rem;
   width: 14rem;
-  background-image: linear-gradient(#E3EFF3, white);
+  background-image: linear-gradient(var(--sky-blue-grey), white);
   top: 0;
 }
 
@@ -93,6 +77,10 @@ body {
   min-width: 65%;
 }
 
+.md-content__inner {
+  margin: 0;
+}
+
 #tabs {
   display: flex;
 }
@@ -103,9 +91,9 @@ body {
 }
 
 #header-nav-links {
-  display:flex;
-  justify-content:center;
-  align-items:center
+  display: flex;
+  justify-content: center;
+  align-items: center
 }
 
 #header-nav-links a {
@@ -113,9 +101,9 @@ body {
   font-size: 0.7rem;
 }
 
-#header-block {
-  background-color: var(--header-grey);
-  height: 3.4rem;
+.md-header__inner {
+  max-width: 100%;
+  margin-inline: 0.5rem;
 }
 
 .md-header__topic {
@@ -134,22 +122,26 @@ body {
 #blue-bar {
   background-color: var(--alces-blue);
   width: 100%;
-  height: 0.7em;
+  height: 0.5rem;
+}
+
+.md-header__button {
+  margin: 0;
+  padding: 0;
 }
 
 .header-image {
   max-height: 2.4rem;
-  margin: 0.5rem;
-}
-
-.header-image .logo {
-  width: 9rem;
+  margin: 0.8rem;
 }
 
 #home-container {
-  display: flex;
-  min-height: 69vh;
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  min-height: 75vh;
+  justify-items: center;
   align-items: center;
+  margin-inline: 5rem;
 }
 
 #home-text {
@@ -163,13 +155,6 @@ body {
 }
 
 #home-image {
-  flex: 1;
-  display: flex;
-}
-
-#home-image img {
-  margin-left: auto;
-  margin-right: auto;
   max-height: 70vh !important;
 }
 
@@ -228,8 +213,10 @@ a {
 
 .spacer {
   height: 50vh;
-  background-color: #DCEEF5;
+  background-color: var(--sky-blue-grey);
   width:100%;
+  border: solid dodgerblue;
+  display: block;
 }
 
 #footer-container {
@@ -263,11 +250,11 @@ a {
 }
 
 .HPC {
-  color: dodgerblue;
+  color: var(--alces-blue);
 }
 
 #github-logo {
-  max-height: 1rem;
+  max-height: 1.5rem;
   margin-left: 1rem;
 }
 
@@ -284,4 +271,5 @@ a {
   --alces-blue: #2693D7;
   --alces-blue-dark: #0A6AA6;
   --header-grey: #191919;
+  --sky-blue-grey: #DCEEF5;
 }
