--- a/docs/extra.css
+++ b/docs/extra.css
@@ -12,7 +12,7 @@
   padding-inline: 1rem;
   width: 14rem;
   background-image: linear-gradient(var(--sky-blue-grey), white);
-  top: 0;
+  top: 4.3rem !important;
 }
 
 @media screen and (max-width: 76.1875em) {
@@ -55,7 +55,6 @@
   }
 }
 
-
 .md-content {
   min-width: 65%;
 }
@@ -66,6 +65,15 @@
 
 #tabs {
   display: flex;
+}
+
+#blue-bar {
+  background-color: var(--alces-blue);
+  width: 100%;
+  height: 0.3rem;
+  position: sticky;
+  top: 4rem;
+  z-index: 4;
 }
 
 .md-nav__link, .md-nav__title {
@@ -100,12 +108,6 @@
 #top-right-link {
   margin-left: auto;
   width: fit-content;
-}
-
-#blue-bar {
-  background-color: var(--alces-blue);
-  width: 100%;
-  height: 0.5rem;
 }
 
 .md-header__button {
