Replace about page with empty flight solo page

--- a/custom_theme/partials/nav.html
+++ b/custom_theme/partials/nav.html
@@ -30,8 +30,8 @@
   <!-- Render item list -->
   <ul class="md-nav__list top-level" hidden="hidden">
     <li>
-      <a href="{{ base_url }}/about">
-        ABOUT
+      <a href="{{ base_url }}/solo">
+        FLIGHT SOLO
       </a>
     </li>
     <li>
