--- a/custom_theme/partials/header.html
+++ b/custom_theme/partials/header.html
@@ -52,8 +52,8 @@
     </label>
 
   <div id="header-nav-links">
-    <a href="{{ base_url }}/about" style="color:white">
-     ABOUT
+    <a href="{{ base_url }}/solo" style="color:white">
+     FLIGHT SOLO
    </a>
    <a href="{{ base_url }}/docs" style="color:white">
      DOCUMENTATION
