--- a/docs/extra.css
+++ b/docs/extra.css
@@ -166,7 +166,7 @@
 }
 
 #mission-block {
-  height: 50vh;
+  height: 30rem;
   background-color: var(--sky-blue-grey);
   display: flex;
   flex-direction: column;
@@ -186,7 +186,7 @@
 #bumcloud {
   margin-top: 1rem;
   margin-bottom: 1rem;
-  max-height: 30vh;
+  max-height: 15rem;
 }
 
 .button {
