--- a/docs/extra.css
+++ b/docs/extra.css
@@ -5,7 +5,6 @@
 
 .md-tabs {
   background-color: var(--header-grey);
-  padding-inline: 14rem;
 }
 
 .md-sidebar {
@@ -66,6 +65,12 @@
 
 #tabs {
   display: flex;
+  padding-inline: 14rem;
+  background-color: var(--header-grey);
+}
+
+#search-container {
+  z-index: 4;
 }
 
 #blue-bar {
@@ -74,7 +79,7 @@
   height: 0.3rem;
   position: sticky;
   top: 4.15rem;
-  z-index: 4;
+  z-index: 1;
 }
 
 .md-nav__link, .md-nav__title {
@@ -100,6 +105,11 @@
 
 .md-header__topic {
   position: relative;
+}
+
+.md-header {
+  box-shadow: none;
+  transition: none;
 }
 
 .md-version__current {
@@ -251,7 +261,7 @@ a {
 .footer {
   display: flex;
   position: relative;
-  z-index: 2;
+  z-index: 1;
   justify-content: center;
   align-items: center;
   max-height: 5rem;
@@ -277,6 +287,30 @@ a {
 #github-logo {
   max-height: 1.5rem;
   margin-left: 1rem;
+}
+
+.md-sidebar, .md-sidebar__scrollwrap  {
+  overflow: visible;
+}
+
+
+[data-md-toggle=search]:checked~.md-container .md-search__output {
+  box-shadow: 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12), 0 3px 5px -1px rgba(0,0,0,.4);
+  opacity: 1;
+  overflow: visible;
+  width: auto;
+  right: 0;
+}
+
+[data-md-toggle=search]:checked~.md-container .md-search__overlay {
+  width: 100%;
+  height: 100%;
+  transition: width 0s,height 0s,opacity .25s;
+  opacity: 1;
+}
+
+[data-md-toggle=search]:checked~.md-container .md-search__scrollwrap {
+  max-height: 75vh;
 }
 
 [data-md-color-scheme="alces"] {
