--- a/custom_theme/partials/header.html
+++ b/custom_theme/partials/header.html
@@ -23,25 +23,25 @@
 <!-- Determine base classes -->
 {% set class = "md-header" %}
 {% if "navigation.tabs.sticky" in features %}
-  {% set class = class ~ " md-header--shadow md-header--lifted" %}
+{% set class = class ~ " md-header--shadow md-header--lifted" %}
 {% elif "navigation.tabs" not in features %}
-  {% set class = class ~ " md-header--shadow" %}
+{% set class = class ~ " md-header--shadow" %}
 {% endif %}
 
 <!-- Header -->
 <header class="{{ class }}" data-md-component="header">
   <nav
-    class="md-header__inner md-grid"
-    aria-label="{{ lang.t('header') }}"
+          class="md-header__inner md-grid"
+          aria-label="{{ lang.t('header') }}"
   >
 
     <!-- Link to home -->
     <a
-      href="{{ config.extra.homepage | d(nav.homepage.url, true) | url }}"
-      title="{{ config.site_name | e }}"
-      class="md-header__button"
-      aria-label="{{ config.site_name }}"
-      data-md-component="logo"
+            href="{{ config.extra.homepage | d(nav.homepage.url, true) | url }}"
+            title="{{ config.site_name | e }}"
+            class="md-header__button"
+            aria-label="{{ config.site_name }}"
+            data-md-component="logo"
     >
       <img class="header-image logo" src="{{ base_url }}/{{ config.theme.logo }}">
     </a>
@@ -51,93 +51,98 @@
       {% include ".icons/material/menu" ~ ".svg" %}
     </label>
 
-  <div id="header-nav-links">
-    <a href="{{ base_url }}/solo" style="color:white">
-     FLIGHT SOLO
-   </a>
-   <a href="{{ base_url }}/docs" style="color:white">
-     DOCUMENTATION
-   </a>
-  </div>
+    <div id="header-nav-links">
+      <a href="{{ base_url }}/solo" style="color:white">
+        FLIGHT SOLO
+      </a>
+      <a href="{{ base_url }}/docs" style="color:white">
+        DOCUMENTATION
+      </a>
+    </div>
 
-    <!-- Color palette -->
-    {% if config.theme.palette %}
+    <div id="top-right-links">
+
+      <!-- Color palette -->
+      {% if config.theme.palette %}
       {% if not config.theme.palette is mapping %}
-        <form class="md-header__option" data-md-component="palette">
-          {% for option in config.theme.palette %}
-            {% set scheme  = option.scheme  | d("default", true) %}
-            {% set primary = option.primary | d("indigo", true) %}
-            {% set accent  = option.accent  | d("indigo", true) %}
-            <input
-              class="md-option"
-              data-md-color-media="{{ option.media }}"
-              data-md-color-scheme="{{ scheme | replace(' ', '-') }}"
-              data-md-color-primary="{{ primary | replace(' ', '-') }}"
-              data-md-color-accent="{{ accent | replace(' ', '-') }}"
-              {% if option.toggle %}
+      <form class="md-header__option" data-md-component="palette">
+        {% for option in config.theme.palette %}
+        {% set scheme  = option.scheme  | d("default", true) %}
+        {% set primary = option.primary | d("indigo", true) %}
+        {% set accent  = option.accent  | d("indigo", true) %}
+        <input
+                class="md-option"
+                data-md-color-media="{{ option.media }}"
+                data-md-color-scheme="{{ scheme | replace(' ', '-') }}"
+                data-md-color-primary="{{ primary | replace(' ', '-') }}"
+                data-md-color-accent="{{ accent | replace(' ', '-') }}"
+                {% if option.toggle %}
                 aria-label="{{ option.toggle.name }}"
-              {% else  %}
+                {% else  %}
                 aria-hidden="true"
-              {% endif %}
-              type="radio"
-              name="__palette"
-              id="__palette_{{ loop.index }}"
-            />
-            {% if option.toggle %}
-              <label
+                {% endif %}
+                type="radio"
+                name="__palette"
+                id="__palette_{{ loop.index }}"
+        />
+        {% if option.toggle %}
+        <label
                 class="md-header__button md-icon"
                 title="{{ option.toggle.name }}"
                 for="__palette_{{ loop.index0 or loop.length }}"
                 hidden
-              >
-                {% include ".icons/" ~ option.toggle.icon ~ ".svg" %}
-              </label>
-            {% endif %}
-          {% endfor %}
-        </form>
+        >
+          {% include ".icons/" ~ option.toggle.icon ~ ".svg" %}
+        </label>
+        {% endif %}
+        {% endfor %}
+      </form>
       {% endif %}
-    {% endif %}
+      {% endif %}
 
-    <!-- Site language selector -->
-    {% if config.extra.alternate %}
+      <!-- Site language selector -->
+      {% if config.extra.alternate %}
       <div class="md-header__option">
         <div class="md-select">
           {% set icon = config.theme.icon.alternate or "material/translate" %}
           <button
-            class="md-header__button md-icon"
-            aria-label="{{ lang.t('select.language') }}"
+                  class="md-header__button md-icon"
+                  aria-label="{{ lang.t('select.language') }}"
           >
             {% include ".icons/" ~ icon ~ ".svg" %}
           </button>
           <div class="md-select__inner">
             <ul class="md-select__list">
               {% for alt in config.extra.alternate %}
-                <li class="md-select__item">
-                  <a
-                    href="{{ alt.link | url }}"
-                    hreflang="{{ alt.lang }}"
-                    class="md-select__link"
-                  >
-                    {{ alt.name }}
-                  </a>
-                </li>
+              <li class="md-select__item">
+                <a
+                        href="{{ alt.link | url }}"
+                        hreflang="{{ alt.lang }}"
+                        class="md-select__link"
+                >
+                  {{ alt.name }}
+                </a>
+              </li>
               {% endfor %}
             </ul>
           </div>
         </div>
       </div>
-    {% endif %}
+      {% endif %}
 
-    <div id="top-right-link">
+      <a href="https://github.com/openflighthpc">
+        <img id="github-logo" src="{{ base_url }}/assets/images/github-mark-white.svg">
+      </a>
+
       <a id="alces-link" href="https://alces-flight.com" target="_blank">
         <img class="header-image" src="{{ base_url }}/assets/images/poweredby_white.png">
       </a>
     </div>
 
-  <!-- Navigation tabs (sticky) -->
-  {% if "navigation.tabs.sticky" in features %}
+    <!-- Navigation tabs (sticky) -->
+    {% if "navigation.tabs.sticky" in features %}
     {% if "navigation.tabs" in features %}
-      {% include "partials/tabs.html" %}
+    {% include "partials/tabs.html" %}
     {% endif %}
-  {% endif %}
+    {% endif %}
 </header>
