--- a/docs/stylesheets/_search.css
+++ b/docs/stylesheets/_search.css
@@ -1,5 +1,6 @@
-#search-container {
+.search-container {
     margin-left: 1rem;
+    z-index: 4;
 }
 
 [data-md-toggle=search]:checked~.md-container #tabs {
@@ -82,10 +83,8 @@
 }
 
 @media screen and (max-width: 59.9375em) {
-    #search-container {
+    .search-container {
         margin-left: 0;
-        min-width: 10rem;
-        width: 100%;
     }
 
     .md-search__inner {
