--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -73,13 +73,32 @@ html {
   box-shadow: none !important;
 }
 
-.md-header__inner {
-  max-width: 100%;
-  margin-inline: 0.5rem;
+#version-container {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.md-version__current {
+  padding: 0.6rem;
+  margin: 0 !important;
+}
+
+.md-version__list {
+  margin: 0 !important;
 }
 
 .md-header__title {
   max-width: fit-content;
+  flex-grow: 0;
+}
+
+[dir="ltr"] .md-header__title {
+  margin-left: 0;
+}
+
+.md-header__inner {
+  max-width: 100%;
+  margin-inline: 0.5rem;
 }
 
 .md-header__topic {
@@ -93,10 +112,6 @@ html {
 .md-header {
   box-shadow: none;
   transition: none;
-}
-
-.md-version__current {
-  color: white;
 }
 
 .top-right-links {
@@ -252,6 +267,7 @@ html {
 
   .md-sidebar--primary {
     left: -14rem !important;
+    top: 0 !important;
     display: block !important;
   }
 
@@ -268,6 +284,7 @@ html {
 
   .md-sidebar--primary .alces-link {
     display: block !important;
+    align-self: center;
   }
 
   #burger {
@@ -308,7 +325,7 @@ html {
   }
 
   #tabs {
-    padding-right: 1rem;
+    display: none;
   }
 
   .md-tabs {
