--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -61,6 +61,7 @@ html {
   overflow: visible;
 }
 
+
 #header-nav-links {
   display: flex;
   justify-content: center;
@@ -77,23 +78,43 @@ html {
   box-shadow: none !important;
 }
 
-#version-container {
-  margin-top: 2rem;
+.md-nav__list:last-child {
   margin-bottom: 2rem;
 }
 
+#version-container .md-header__ellipsis {
+  padding-inline: 0.6rem;
+}
+
+#version-container .md-header__topic {
+  align-items: flex-start;
+}
+
+#version-container .md-header__topic, .md-version__current, .md-version {
+  font-size: 0.7rem;
+  line-height: 0.7rem;
+}
+
+.md-version {
+  display: flex;
+  align-items: flex-start;
+  position: relative;
+  top: -1px;
+}
+
 .md-version__current {
-  padding: 0.6rem;
+  padding-left: 0.6rem;
   margin: 0 !important;
 }
 
 .md-version__list {
   margin: 0 !important;
+  margin-left: 0.2rem !important;
+  top: -0.5rem;
 }
 
-.md-header__title {
-  max-width: fit-content;
-  flex-grow: 0;
+[dir="ltr"] .md-version__link {
+  padding-inline: 0.4rem;
 }
 
 [dir="ltr"] .md-header__title {
@@ -103,10 +124,6 @@ html {
 .md-header__inner {
   max-width: 100%;
   margin-inline: 0.5rem;
-}
-
-.md-header__topic {
-  position: relative;
 }
 
 .md-header__option {
@@ -421,6 +438,23 @@ html {
 
   .md-tabs {
     display: block;
+  }
+
+  #version-container {
+    width: 100%;
+  }
+
+  #version-container .md-header__topic {
+    padding-top: 0.8rem;
+    align-items: flex-start;
+  }
+
+  #version-container .md-header__ellipsis {
+    padding-inline: 0.8rem;
+  }
+
+  .md-version {
+    top: 0;
   }
 
   #home-header {
