Fix nav bar title position for sub levels of menu

--- a/custom_theme/partials/nav.html
+++ b/custom_theme/partials/nav.html
@@ -18,7 +18,7 @@
     <a
       href="{{ config.extra.homepage | d(nav.homepage.url, true) | url }}"
       title="{{ config.site_name | e }}"
-      class="md-nav__button md-logo"
+      class="md-nav__button md-logo md-nav-logo"
       aria-label="{{ config.site_name }}"
       data-md-component="logo"
     >
